Fix footer bar stretching

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -27,14 +27,14 @@
 .bar {
   background: #00249c;
   display: flex;
-  height: 5vh;
+  height: calc(5vh + 30px); /* Increased height by 30px */
   width: 100%;
   position: relative;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
   z-index: 2;
-  margin-top: -30px; /* Moved up by 30px */
+  margin-top: -60px; /* Moved up more to compensate for increased height */
 }
 
 .copyright {
